# plato-dropbox

./: .gitignore  Cargo.toml  LICENSE  README.md  Settings-sample.toml  index.html  policy  rustfmt.toml
.github/workflows/: build.yml
src/: main.rs  plato.rs
