[package]
authors = ["quangtruongnb"]
name = "plato-dropbox"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.9"
chrono = { version = "0.4", features = ["serde"] }
ego-tree = "0.10"
epub-builder = "0.7"
futures = "0.3"
lazy_static = "1.5"
log-panics = { version = "2.1", features = ["with-backtrace"] }
maud = "0.26"
mime_guess = "2.0"
regex = "1"
reqwest = { version = "0.12.2", features = [
	"blocking",
	"rustls-tls",
	"json",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
scraper = "0.22"
signal-hook = "0.3"
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread"] }
toml = "0.8"
url = "2.5"
